--- a/BioVitalAge/templates/home_page/statistiche.html
+++ b/BioVitalAge/templates/home_page/statistiche.html
@@ -51,8 +51,6 @@
     });
   </script>
 
-  <!-- JS import -->
-  <script src="{%  static 'js/components/sidebar.js' %}"></script>
   {# dati mensili #}
   {{ monthly_labels|json_script:"monthly-labels" }}
   {{ monthly_counts|json_script:"monthly-data" }}
@@ -64,6 +62,9 @@
   {# dati settimanali #}
   {{ weekly_labels|json_script:"weekly-labels" }}
   {{ weekly_counts|json_script:"weekly-data" }}
+
+  <!-- JS import -->
+  <script src="{%  static 'js/components/sidebar.js' %}"></script>
   <script src="{% static 'js/home_page/statistiche.js' %}" defer></script>
 </head>
 
@@ -232,7 +233,6 @@
                 </div>
     </div>
 
-
     <div class="content-chart">
       <div class="charts-section">
         <div class="chart-container">
@@ -262,73 +262,18 @@
       <canvas id="incomeByDepartment"></canvas>
     </div>
   </main>
+
   <!-- Fetch email from backend -->
   {{ emails|json_script:"emails-data" }}
-  <!-- Script -->
   <script>
       window.emailCount = {{ emails|length }};
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="{% static 'js/statistiche.js' %}"></script>
+
+  <!-- Script per dati email -->
+  <script id="emails-data" type="application/json">[]</script>
 </body>
-
-<script>
-   function generateChart(ctx, data, label) {
-            new Chart(ctx, {
-                type: "line",
-                data: {
-                labels: ["Giorno 1", "Giorno 2", "Giorno 3"],  
-                datasets: [{
-                    label: label,
-                    data: data,
-                    backgroundColor: "#3b255d2c",
-                    borderColor: "#3a255d",
-                    tension: 0.3,
-                    fill: true,
-                }],
-                },
-                options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                plugins: { legend: { display: false } },
-                scales: { x: { display: false }, y: { display: false } },
-                },
-            });
-        }
-
-    document.addEventListener("DOMContentLoaded", () => {
-
-       // Chart 1: Livello BP
-            generateChart(
-            document.getElementById("chart1").getContext("2d"),
-            [2, 4, 6],
-            "Insulina"
-            );
-
-            // Chart 2: Glicemia (ultime 3 visite: 110,95,140)
-            generateChart(
-            document.getElementById("chart2").getContext("2d"),
-            [110, 95, 140],
-            "Glicemia"
-            );
-
-            // Chart 3: Emoglobina (ultime 3 visite: 22,26,28)
-            generateChart(
-            document.getElementById("chart3").getContext("2d"),
-            [22, 26, 28],
-            "Emoglobina"
-            );
-
-            // Chart 4: Colesterolo (ultime 3 visite: 260,280,255)
-            generateChart(
-            document.getElementById("chart4").getContext("2d"),
-            [260, 280, 255],
-            "Colesterolo"
-            );
-
-    })
-</script>
-
-<!-- Script per dati email -->
-<script id="emails-data" type="application/json">[]</script>
-
 </html>
     
