--- a/BioVitalAge/templates/includes/Calendario.html
+++ b/BioVitalAge/templates/includes/Calendario.html
@@ -56,7 +56,6 @@
         </div>
       </div>
 
-
       <div class="Calendario-container">
 
         <div class="Calendario-Header">
@@ -83,11 +82,10 @@
 
             </div>
 
-            <p id="currentData"></p> <!-- Abilitare dinamicamente -->
+            <p id="currentData"></p> 
             
             <div class="tools-container">
                 
-
                 <div class="layout-option">
                     <button class="active" id="monthLayout">Mese</button>
                     <button id="weekLayout">Settimana</button>
@@ -117,10 +115,7 @@
                     </div>
                 </div>
   
-    
-
                 <!-- Modale per aggiungere un paziente -->
-                 <!-- Seconda modale (sopramodale) -->
                 <div id="addUserModal" class="modal-overlay-user hidden-user-modal">
                     <div class="modal-content-user">
                         <header class="header-modal-appointments mb-5">
@@ -346,7 +341,6 @@
             </div>    
         </div>
 
-
         <!-- CALENDARIO MONTH LAYOUT -->
         <div class="header-rowTrace" id="month-head">
                 <p>Lunedi</p>
@@ -361,7 +355,6 @@
         <div class="container-content-table" id="month-layout">
             <!-- Qui le celle verranno create dinamicamente da JS -->
         </div>
-
 
         <!-- CALENDARIO SETTIMANALE LAYOUT -->
         <div class="header-week" id="week-head">
@@ -525,9 +518,7 @@
         </div>
 
         <div class="day-layout-content" id="day-layout">
-
-            <div class="row-day">
-        
+            <div class="row-day"> 
                 <div class="row-for-ora-day">
                     <div class="cellaDay"></div>
                     <div class="cellaDay"></div>
@@ -681,33 +672,9 @@
                     <div class="cellaDay"></div>
                     <div class="cellaDay"></div>
                 </div>
-        
             </div>
         </div>
-
-        
-       
-
-
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
     <!-- POPUP APPOINTMENTS -->
 
@@ -717,7 +684,7 @@
         <span id="closeDetailsModal" class="custom-close">&times;</span>
         <h3>📋 Dettagli Appuntamento</h3>
         <div id="appointmentDetails" class="custom-details-content">
-            <!-- I dati verranno iniettati qui -->
+            
         </div>
         </div>
     </div>
